--- a/partials/articles.html
+++ b/partials/articles.html
@@ -1,7 +1,7 @@
 <div class="article1">
     <h2>The Value of Money</h2>
     <div class="content">
-        <img class="art-img" src="../img/art-img-1.jpg">
+        <img class="art-img" src="./img/art-img-1.jpg">
         <div class="text">
             <p>The significant evidence establishes many things were traded in ancient markets that could be described as a medium of exchange. These included livestock and grain things directly useful in themselves but also merely attractive items such as cowrie shells or beads[citation needed] which were exchanged for more useful commodities. However, such exchanges would be better described as barter, and the common bartering of a particular commodity (especially when the commodity items are not fungible)</p>
             <p>Regarding money of exchange, the use of representative money historically pre-dates the invention of coinage as well. In the ancient empires of Egypt, Babylon, India and China, the temples and palaces often had commodity warehouses which made use of clay tokens and other materials which served as evidence of a claim upon a portion of the goods stored in the warehouses. There is no concrete evidence these kinds of tokens were used for trade, however, only for administration and accounting.</p>
@@ -14,7 +14,7 @@
 <div class="article2">
     <h2>GMO food</h2>
     <div class="content">
-        <img class="art-img" src="../img/art-img-2.jpg">
+        <img class="art-img" src="./img/art-img-2.jpg">
         <div class="text">
             <p>It is very likely you are eating foods and food products that are made with ingredients that come from GMO crops. Many GMO crops are used to make ingredients that Americans eat such as cornstarch, corn syrup, corn oil, soybean oil, canola oil, or granulated sugar. A few fresh fruit and vegetables are available in GMO varieties. including potatoes, summer squash, apples, papayas, and pink pineapples. Although GMOs are in a lot of the foods we eat, most of the GMO crops grown in the United States are used for animal food.</p>
             <p>Only a few types of GMO crops are grown in the United States, but some of these GMOs make up a large percentage of the crop grown (e.g., soybeans, corn, sugar beets, canola, and cotton).In 2020, GMO soybeans made up 94% of all soybeans planted, GMO cotton made up 96% of all cotton planted, and 92% of corn planted was GMO corn.</p>
@@ -27,7 +27,7 @@
 <div class="article3">
     <h2>The View of World in 2100</h2>
     <div class="content">
-        <img class="art-img" src="../img/art-img-3.jpg">
+        <img class="art-img" src="./img/art-img-3.jpg">
         <div class="text">
             <p>Climate change refers to long-term shifts in temperatures and weather patterns. Such shifts can be natural, due to changes in the sun’s activity or large volcanic eruptions. But since the 1800s, human activities have been the main driver of climate change, primarily due to the burning of fossil fuels like coal, oil and gas. Burning fossil fuels generates greenhouse gas emissions that act like a blanket wrapped around the Earth, trapping the sun’s heat and raising temperatures.</p>
             <p>The main greenhouse gases that are causing climate change include carbon dioxide and methane. These come from using gasoline for driving a car or coal for heating a building, for example. Clearing land and cutting down forests can also release carbon dioxide. Agriculture, oil and gas operations are major sources of methane emissions. Energy, industry, transport, buildings, agriculture and land use are among the main sectors causing greenhouse gases.</p>
