--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -1,31 +1,31 @@
 <div class="grid">
    <figure class="proj" id="proj1">
-      <img src="../img/port-1.png" alt="description of image" /> 
+      <img src="./img/port-1.png" alt="description of image" /> 
       <figcaption>Flying car</figcaption>
    </figure>
 
    <figure class="proj" id="proj2">
-      <img src="../img/port-2.png" alt="description of image" /> 
+      <img src="./img/port-2.png" alt="description of image" /> 
       <figcaption>Sleeping Fox</figcaption>
    </figure>
 
    <figure class="proj" id="proj3">
-      <img src="../img/port-3.png" alt="description of image" /> 
+      <img src="./img/port-3.png" alt="description of image" /> 
       <figcaption>Typographical Poster</figcaption>
    </figure>
 
    <figure class="proj" id="proj4">
-      <img src="../img/port-4.png" alt="description of image" /> 
+      <img src="./img/port-4.png" alt="description of image" /> 
       <figcaption>The Meteorologist</figcaption>
    </figure>
 
    <figure class="proj" id="proj5">
-      <img src="../img/port-5.png" alt="description of image" /> 
+      <img src="./img/port-5.png" alt="description of image" /> 
       <figcaption>Moon Water</figcaption>
    </figure>
 
    <figure class="proj" id="proj6">
-      <img src="../img/port-6.png" alt="description of image" /> 
+      <img src="./img/port-6.png" alt="description of image" /> 
       <figcaption>Winter Window</figcaption>
    </figure>
 </div>
